--- a/src/sass/helpers/_mixins.sass
+++ b/src/sass/helpers/_mixins.sass
@@ -1,3 +1,20 @@
+// verticl
+=vertical
+	font-size: 0
+	text-align: center
+	&:before
+		content: ""
+		display: inline-block
+		vertical-align: middle
+		width: 0
+		height: 100%
+
+// text-overflow
+=text-overflow
+	overflow: hidden
+	text-overflow: ellipsis
+	white-space: nowrap
+
 // hide text
 =hide-text
 	font: 0/0 a
