--- a/src/sass/helpers/_sprite.sass
+++ b/src/sass/helpers/_sprite.sass
@@ -9,87 +9,142 @@
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites
 $s-icon-basket-name: 's-icon-basket'
-$s-icon-basket-x: 0px
+$s-icon-basket-x: 21px
 $s-icon-basket-y: 0px
-$s-icon-basket-offset-x: 0px
+$s-icon-basket-offset-x: -21px
 $s-icon-basket-offset-y: 0px
 $s-icon-basket-width: 16px
 $s-icon-basket-height: 20px
-$s-icon-basket-total-width: 58px
-$s-icon-basket-total-height: 54px
+$s-icon-basket-total-width: 73px
+$s-icon-basket-total-height: 73px
 $s-icon-basket-image: '../img/sprite.png'
-$s-icon-basket: (0px, 0px, 0px, 0px, 16px, 20px, 58px, 54px, '../img/sprite.png', 's-icon-basket', )
+$s-icon-basket: (21px, 0px, -21px, 0px, 16px, 20px, 73px, 73px, '../img/sprite.png', 's-icon-basket', )
+$s-icon-facebook-name: 's-icon-facebook'
+$s-icon-facebook-x: 0px
+$s-icon-facebook-y: 25px
+$s-icon-facebook-offset-x: 0px
+$s-icon-facebook-offset-y: -25px
+$s-icon-facebook-width: 16px
+$s-icon-facebook-height: 16px
+$s-icon-facebook-total-width: 73px
+$s-icon-facebook-total-height: 73px
+$s-icon-facebook-image: '../img/sprite.png'
+$s-icon-facebook: (0px, 25px, 0px, -25px, 16px, 16px, 73px, 73px, '../img/sprite.png', 's-icon-facebook', )
 $s-icon-hearth-name: 's-icon-hearth'
-$s-icon-hearth-x: 0px
+$s-icon-hearth-x: 42px
 $s-icon-hearth-y: 25px
-$s-icon-hearth-offset-x: 0px
+$s-icon-hearth-offset-x: -42px
 $s-icon-hearth-offset-y: -25px
 $s-icon-hearth-width: 16px
 $s-icon-hearth-height: 14px
-$s-icon-hearth-total-width: 58px
-$s-icon-hearth-total-height: 54px
+$s-icon-hearth-total-width: 73px
+$s-icon-hearth-total-height: 73px
 $s-icon-hearth-image: '../img/sprite.png'
-$s-icon-hearth: (0px, 25px, 0px, -25px, 16px, 14px, 58px, 54px, '../img/sprite.png', 's-icon-hearth', )
+$s-icon-hearth: (42px, 25px, -42px, -25px, 16px, 14px, 73px, 73px, '../img/sprite.png', 's-icon-hearth', )
+$s-icon-input-arrow-name: 's-icon-input-arrow'
+$s-icon-input-arrow-x: 34px
+$s-icon-input-arrow-y: 46px
+$s-icon-input-arrow-offset-x: -34px
+$s-icon-input-arrow-offset-y: -46px
+$s-icon-input-arrow-width: 12px
+$s-icon-input-arrow-height: 6px
+$s-icon-input-arrow-total-width: 73px
+$s-icon-input-arrow-total-height: 73px
+$s-icon-input-arrow-image: '../img/sprite.png'
+$s-icon-input-arrow: (34px, 46px, -34px, -46px, 12px, 6px, 73px, 73px, '../img/sprite.png', 's-icon-input-arrow', )
+$s-icon-instagram-name: 's-icon-instagram'
+$s-icon-instagram-x: 42px
+$s-icon-instagram-y: 0px
+$s-icon-instagram-offset-x: -42px
+$s-icon-instagram-offset-y: 0px
+$s-icon-instagram-width: 16px
+$s-icon-instagram-height: 16px
+$s-icon-instagram-total-width: 73px
+$s-icon-instagram-total-height: 73px
+$s-icon-instagram-image: '../img/sprite.png'
+$s-icon-instagram: (42px, 0px, -42px, 0px, 16px, 16px, 73px, 73px, '../img/sprite.png', 's-icon-instagram', )
 $s-icon-login-name: 's-icon-login'
-$s-icon-login-x: 21px
+$s-icon-login-x: 0px
 $s-icon-login-y: 0px
-$s-icon-login-offset-x: -21px
+$s-icon-login-offset-x: 0px
 $s-icon-login-offset-y: 0px
 $s-icon-login-width: 16px
 $s-icon-login-height: 20px
-$s-icon-login-total-width: 58px
-$s-icon-login-total-height: 54px
+$s-icon-login-total-width: 73px
+$s-icon-login-total-height: 73px
 $s-icon-login-image: '../img/sprite.png'
-$s-icon-login: (21px, 0px, -21px, 0px, 16px, 20px, 58px, 54px, '../img/sprite.png', 's-icon-login', )
+$s-icon-login: (0px, 0px, 0px, 0px, 16px, 20px, 73px, 73px, '../img/sprite.png', 's-icon-login', )
 $s-icon-menu-name: 's-icon-menu'
-$s-icon-menu-x: 21px
-$s-icon-menu-y: 25px
-$s-icon-menu-offset-x: -21px
-$s-icon-menu-offset-y: -25px
+$s-icon-menu-x: 0px
+$s-icon-menu-y: 46px
+$s-icon-menu-offset-x: 0px
+$s-icon-menu-offset-y: -46px
 $s-icon-menu-width: 14px
 $s-icon-menu-height: 10px
-$s-icon-menu-total-width: 58px
-$s-icon-menu-total-height: 54px
+$s-icon-menu-total-width: 73px
+$s-icon-menu-total-height: 73px
 $s-icon-menu-image: '../img/sprite.png'
-$s-icon-menu: (21px, 25px, -21px, -25px, 14px, 10px, 58px, 54px, '../img/sprite.png', 's-icon-menu', )
+$s-icon-menu: (0px, 46px, 0px, -46px, 14px, 10px, 73px, 73px, '../img/sprite.png', 's-icon-menu', )
+$s-icon-mouse-name: 's-icon-mouse'
+$s-icon-mouse-x: 63px
+$s-icon-mouse-y: 0px
+$s-icon-mouse-offset-x: -63px
+$s-icon-mouse-offset-y: 0px
+$s-icon-mouse-width: 10px
+$s-icon-mouse-height: 16px
+$s-icon-mouse-total-width: 73px
+$s-icon-mouse-total-height: 73px
+$s-icon-mouse-image: '../img/sprite.png'
+$s-icon-mouse: (63px, 0px, -63px, 0px, 10px, 16px, 73px, 73px, '../img/sprite.png', 's-icon-mouse', )
 $s-icon-search-name: 's-icon-search'
-$s-icon-search-x: 42px
-$s-icon-search-y: 0px
-$s-icon-search-offset-x: -42px
-$s-icon-search-offset-y: 0px
+$s-icon-search-x: 21px
+$s-icon-search-y: 25px
+$s-icon-search-offset-x: -21px
+$s-icon-search-offset-y: -25px
 $s-icon-search-width: 16px
 $s-icon-search-height: 16px
-$s-icon-search-total-width: 58px
-$s-icon-search-total-height: 54px
+$s-icon-search-total-width: 73px
+$s-icon-search-total-height: 73px
 $s-icon-search-image: '../img/sprite.png'
-$s-icon-search: (42px, 0px, -42px, 0px, 16px, 16px, 58px, 54px, '../img/sprite.png', 's-icon-search', )
+$s-icon-search: (21px, 25px, -21px, -25px, 16px, 16px, 73px, 73px, '../img/sprite.png', 's-icon-search', )
 $s-icon-star-full-name: 's-icon-star-full'
-$s-icon-star-full-x: 40px
-$s-icon-star-full-y: 25px
-$s-icon-star-full-offset-x: -40px
-$s-icon-star-full-offset-y: -25px
+$s-icon-star-full-x: 63px
+$s-icon-star-full-y: 21px
+$s-icon-star-full-offset-x: -63px
+$s-icon-star-full-offset-y: -21px
 $s-icon-star-full-width: 10px
 $s-icon-star-full-height: 10px
-$s-icon-star-full-total-width: 58px
-$s-icon-star-full-total-height: 54px
+$s-icon-star-full-total-width: 73px
+$s-icon-star-full-total-height: 73px
 $s-icon-star-full-image: '../img/sprite.png'
-$s-icon-star-full: (40px, 25px, -40px, -25px, 10px, 10px, 58px, 54px, '../img/sprite.png', 's-icon-star-full', )
+$s-icon-star-full: (63px, 21px, -63px, -21px, 10px, 10px, 73px, 73px, '../img/sprite.png', 's-icon-star-full', )
 $s-icon-star-name: 's-icon-star'
-$s-icon-star-x: 0px
-$s-icon-star-y: 44px
-$s-icon-star-offset-x: 0px
-$s-icon-star-offset-y: -44px
+$s-icon-star-x: 19px
+$s-icon-star-y: 46px
+$s-icon-star-offset-x: -19px
+$s-icon-star-offset-y: -46px
 $s-icon-star-width: 10px
 $s-icon-star-height: 10px
-$s-icon-star-total-width: 58px
-$s-icon-star-total-height: 54px
+$s-icon-star-total-width: 73px
+$s-icon-star-total-height: 73px
 $s-icon-star-image: '../img/sprite.png'
-$s-icon-star: (0px, 44px, 0px, -44px, 10px, 10px, 58px, 54px, '../img/sprite.png', 's-icon-star', )
-$spritesheet-width: 58px
-$spritesheet-height: 54px
+$s-icon-star: (19px, 46px, -19px, -46px, 10px, 10px, 73px, 73px, '../img/sprite.png', 's-icon-star', )
+$s-icon-up-name: 's-icon-up'
+$s-icon-up-x: 0px
+$s-icon-up-y: 61px
+$s-icon-up-offset-x: 0px
+$s-icon-up-offset-y: -61px
+$s-icon-up-width: 6px
+$s-icon-up-height: 12px
+$s-icon-up-total-width: 73px
+$s-icon-up-total-height: 73px
+$s-icon-up-image: '../img/sprite.png'
+$s-icon-up: (0px, 61px, 0px, -61px, 6px, 12px, 73px, 73px, '../img/sprite.png', 's-icon-up', )
+$spritesheet-width: 73px
+$spritesheet-height: 73px
 $spritesheet-image: '../img/sprite.png'
-$spritesheet-sprites: ($s-icon-basket, $s-icon-hearth, $s-icon-login, $s-icon-menu, $s-icon-search, $s-icon-star-full, $s-icon-star, )
-$spritesheet: (58px, 54px, '../img/sprite.png', $spritesheet-sprites, )
+$spritesheet-sprites: ($s-icon-basket, $s-icon-facebook, $s-icon-hearth, $s-icon-input-arrow, $s-icon-instagram, $s-icon-login, $s-icon-menu, $s-icon-mouse, $s-icon-search, $s-icon-star-full, $s-icon-star, $s-icon-up, )
+$spritesheet: (73px, 73px, '../img/sprite.png', $spritesheet-sprites, )
 
 // The provided mixins are intended to be used with the array-like variables
 //
