--- a/src/sass/part/_button.sass
+++ b/src/sass/part/_button.sass
@@ -3,7 +3,7 @@
 	background-color: $pink
 	text-align: center
 	color: $white
-	letter-spacing: .2rem
+	letter-spacing: .2em
 	font-weight: 700
 	border-radius: 3px
 	text-transform: uppercase
@@ -26,6 +26,7 @@
 			display: inline-block
 			vertical-align: middle
 			font-size: 10px
+			letter-spacing: .2em
 		.icon
 			margin-right: 15px
 	&-block
@@ -40,3 +41,13 @@
 		text-align: center
 		background-color: $pink
 		border-radius: 50%
+	&-next
+		font-size: 0
+		span,.icon
+			vertical-align: middle
+		span
+			display: inline-block
+			font-size: $text-sm
+			color: $white
+			letter-spacing: .05em
+			margin-right: 10px
