--- a/src/sass/part/_icon.sass
+++ b/src/sass/part/_icon.sass
@@ -13,3 +13,14 @@
 		+sprite($s-icon-hearth)
 	&-star
 		+sprite($s-icon-star)
+	&-mouse
+		+sprite($s-icon-mouse)
+	&-up
+		+sprite($s-icon-up)
+	&-input
+		&-arrow
+			+sprite($s-icon-input-arrow)
+	&-facebook
+		+sprite($s-icon-facebook)
+	&-instagram
+		+sprite($s-icon-instagram)
