--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -1,5 +1,5 @@
 <!-- header BEGIN -->
-<div class="header">
+<header class="header">
 	<div class="inner">
 		<div class="header-left">
 			<a href="#" class="header-btn btn-menu"><i class="icon icon-menu"></i></a>
@@ -13,5 +13,5 @@
 			</a>
 		</div>
 	</div>
-</div>
+</header>
 <!-- header END -->
