--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -105,12 +105,12 @@ title: TheBottle Main
 					<div class="row">
 						<div class="col col-3">
 							<div class="popular__item">
-								<div class="popular-wrapper">
-									<div class="popular-hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
-									<div class="popular-img">
+								<div class="popular__wrapper">
+									<div class="popular__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
+									<div class="popular__img">
 										<img src="img/popular-img-00.png" alt="img">
 									</div>
-									<div class="popular-rate">
+									<div class="popular__rate">
 										<ul class="rate">
 											<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
 											<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
@@ -119,10 +119,10 @@ title: TheBottle Main
 											<li><a href="#"><i class="icon icon-star"></i></a></li>
 										</ul>
 									</div>
-									<div class="popular-name">Baileys Original, 0.7 л</div>
-									<div class="popular-categories">Ликер</div>
-									<div class="popular-price"><span>510 грн</span></div>
-									<div class="popular-btn">
+									<div class="popular__name">Baileys Original, 0.7 л</div>
+									<div class="popular__categories">Ликер</div>
+									<div class="popular__price"><span class="popular__price_default">510 грн</span></div>
+									<div class="popular__btn">
 										<a href="#" class="btn btn-block btn-small"><i class="icon icon-basket"></i><span>в корзину</span></a>
 									</div>
 								</div>
@@ -130,12 +130,12 @@ title: TheBottle Main
 						</div>
 						<div class="col col-3">
 							<div class="popular__item">
-								<div class="popular-wrapper">
-									<div class="popular-hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
-									<div class="popular-img">
+								<div class="popular__wrapper">
+									<div class="popular__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
+									<div class="popular__img">
 										<img src="img/popular-img-00.png" alt="img">
 									</div>
-									<div class="popular-rate">
+									<div class="popular__rate">
 										<ul class="rate">
 											<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
 											<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
@@ -144,10 +144,10 @@ title: TheBottle Main
 											<li><a href="#"><i class="icon icon-star"></i></a></li>
 										</ul>
 									</div>
-									<div class="popular-name">Baileys Original, 0.7 л</div>
-									<div class="popular-categories">Ликер</div>
-									<div class="popular-price"><span>510 грн</span></div>
-									<div class="popular-btn">
+									<div class="popular__name">Baileys Original, 0.7 л</div>
+									<div class="popular__categories">Ликер</div>
+									<div class="popular__price"><span class="popular__price_default">510 грн</span></div>
+									<div class="popular__btn">
 										<a href="#" class="btn btn-block btn-small"><i class="icon icon-basket"></i><span>в корзину</span></a>
 									</div>
 								</div>
@@ -155,13 +155,13 @@ title: TheBottle Main
 						</div>
 						<div class="col col-3">
 							<div class="popular__item">
-								<div class="popular-wrapper">
-									<div class="popular-hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
-									<div class="popular-sticker popular-orange">Акция</div>
-									<div class="popular-img">
+								<div class="popular__wrapper">
+									<div class="popular__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
+									<div class="popular__sticker popular__sticker_orange">Акция</div>
+									<div class="popular__img">
 										<img src="img/popular-img-00.png" alt="img">
 									</div>
-									<div class="popular-rate">
+									<div class="popular__rate">
 										<ul class="rate">
 											<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
 											<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
@@ -170,10 +170,10 @@ title: TheBottle Main
 											<li><a href="#"><i class="icon icon-star"></i></a></li>
 										</ul>
 									</div>
-									<div class="popular-name">Johnnie Walker Red Rye Finish, 1 л</div>
-									<div class="popular-categories">Ликер</div>
-									<div class="popular-price"><span class="popular-price-old">1500 грн</span><span>510 грн</span></div>
-									<div class="popular-btn">
+									<div class="popular__name">Johnnie Walker Red Rye Finish, 1 л</div>
+									<div class="popular__categories">Ликер</div>
+									<div class="popular__price"><span class="popular__price_old">1500 грн</span><span class="popular__price_default">510 грн</span></div>
+									<div class="popular__btn">
 										<a href="#" class="btn btn-block btn-small"><i class="icon icon-basket"></i><span>в корзину</span></a>
 									</div>
 								</div>
@@ -181,13 +181,13 @@ title: TheBottle Main
 						</div>
 						<div class="col col-3">
 							<div class="popular__item">
-								<div class="popular-wrapper">
-									<div class="popular-hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
-									<div class="popular-sticker popular-yellow">новинки</div>
-									<div class="popular-img">
+								<div class="popular__wrapper">
+									<div class="popular__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
+									<div class="popular__sticker popular__sticker_yellow">новинки</div>
+									<div class="popular__img">
 										<img src="img/popular-img-00.png" alt="img">
 									</div>
-									<div class="popular-rate">
+									<div class="popular__rate">
 										<ul class="rate">
 											<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
 											<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
@@ -196,10 +196,10 @@ title: TheBottle Main
 											<li><a href="#"><i class="icon icon-star"></i></a></li>
 										</ul>
 									</div>
-									<div class="popular-name">Johnnie Walker Red Rye Finish, 1 л</div>
-									<div class="popular-categories">Ликер</div>
-									<div class="popular-price"><span class="popular-price-old">1500 грн</span><span>510 грн</span></div>
-									<div class="popular-btn">
+									<div class="popular__name">Johnnie Walker Red Rye Finish, 1 л</div>
+									<div class="popular__categories">Ликер</div>
+									<div class="popular__price"><span class="popular__price_old">1500 грн</span><span class="popular__price_default">510 грн</span></div>
+									<div class="popular__btn">
 										<a href="#" class="btn btn-block btn-small"><i class="icon icon-basket"></i><span>в корзину</span></a>
 									</div>
 								</div>
@@ -207,12 +207,12 @@ title: TheBottle Main
 						</div>
 						<div class="col col-3">
 							<div class="popular__item">
-								<div class="popular-wrapper">
-									<div class="popular-hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
-									<div class="popular-img">
+								<div class="popular__wrapper">
+									<div class="popular__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
+									<div class="popular__img">
 										<img src="img/popular-img-00.png" alt="img">
 									</div>
-									<div class="popular-rate">
+									<div class="popular__rate">
 										<ul class="rate">
 											<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
 											<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
@@ -221,10 +221,10 @@ title: TheBottle Main
 											<li><a href="#"><i class="icon icon-star"></i></a></li>
 										</ul>
 									</div>
-									<div class="popular-name">Baileys Original, 0.7 л</div>
-									<div class="popular-categories">Ликер</div>
-									<div class="popular-price"><span>510 грн</span></div>
-									<div class="popular-btn">
+									<div class="popular__name">Baileys Original, 0.7 л</div>
+									<div class="popular__categories">Ликер</div>
+									<div class="popular__price"><span class="popular__price_default">510 грн</span></div>
+									<div class="popular__btn">
 										<a href="#" class="btn btn-block btn-small"><i class="icon icon-basket"></i><span>в корзину</span></a>
 									</div>
 								</div>
@@ -232,12 +232,12 @@ title: TheBottle Main
 						</div>
 						<div class="col col-3">
 							<div class="popular__item">
-								<div class="popular-wrapper">
-									<div class="popular-hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
-									<div class="popular-img">
+								<div class="popular__wrapper">
+									<div class="popular__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
+									<div class="popular__img">
 										<img src="img/popular-img-00.png" alt="img">
 									</div>
-									<div class="popular-rate">
+									<div class="popular__rate">
 										<ul class="rate">
 											<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
 											<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
@@ -246,10 +246,10 @@ title: TheBottle Main
 											<li><a href="#"><i class="icon icon-star"></i></a></li>
 										</ul>
 									</div>
-									<div class="popular-name">Baileys Original, 0.7 л</div>
-									<div class="popular-categories">Ликер</div>
-									<div class="popular-price"><span>510 грн</span></div>
-									<div class="popular-btn">
+									<div class="popular__name">Baileys Original, 0.7 л</div>
+									<div class="popular__categories">Ликер</div>
+									<div class="popular__price"><span class="popular__price_default">510 грн</span></div>
+									<div class="popular__btn">
 										<a href="#" class="btn btn-block btn-small"><i class="icon icon-basket"></i><span>в корзину</span></a>
 									</div>
 								</div>
@@ -257,12 +257,12 @@ title: TheBottle Main
 						</div>
 						<div class="col col-3">
 							<div class="popular__item">
-								<div class="popular-wrapper">
-									<div class="popular-hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
-									<div class="popular-img">
+								<div class="popular__wrapper">
+									<div class="popular__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
+									<div class="popular__img">
 										<img src="img/popular-img-00.png" alt="img">
 									</div>
-									<div class="popular-rate">
+									<div class="popular__rate">
 										<ul class="rate">
 											<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
 											<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
@@ -271,10 +271,10 @@ title: TheBottle Main
 											<li><a href="#"><i class="icon icon-star"></i></a></li>
 										</ul>
 									</div>
-									<div class="popular-name">Baileys Original, 0.7 л</div>
-									<div class="popular-categories">Ликер</div>
-									<div class="popular-price"><span>510 грн</span></div>
-									<div class="popular-btn">
+									<div class="popular__name">Baileys Original, 0.7 л</div>
+									<div class="popular__categories">Ликер</div>
+									<div class="popular__price"><span class="popular__price_default">510 грн</span></div>
+									<div class="popular__btn">
 										<a href="#" class="btn btn-block btn-small"><i class="icon icon-basket"></i><span>в корзину</span></a>
 									</div>
 								</div>
@@ -282,12 +282,12 @@ title: TheBottle Main
 						</div>
 						<div class="col col-3">
 							<div class="popular__item">
-								<div class="popular-wrapper">
-									<div class="popular-hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
-									<div class="popular-img">
+								<div class="popular__wrapper">
+									<div class="popular__hearth"><a href="#"><i class="icon icon-hearth"></i></a></div>
+									<div class="popular__img">
 										<img src="img/popular-img-00.png" alt="img">
 									</div>
-									<div class="popular-rate">
+									<div class="popular__rate">
 										<ul class="rate">
 											<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
 											<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
@@ -296,10 +296,10 @@ title: TheBottle Main
 											<li><a href="#"><i class="icon icon-star"></i></a></li>
 										</ul>
 									</div>
-									<div class="popular-name">Baileys Original, 0.7 л</div>
-									<div class="popular-categories">Ликер</div>
-									<div class="popular-price"><span>510 грн</span></div>
-									<div class="popular-btn">
+									<div class="popular__name">Baileys Original, 0.7 л</div>
+									<div class="popular__categories">Ликер</div>
+									<div class="popular__price"><span class="popular__price_default">510 грн</span></div>
+									<div class="popular__btn">
 										<a href="#" class="btn btn-block btn-small"><i class="icon icon-basket"></i><span>в корзину</span></a>
 									</div>
 								</div>
