change class to BEM class

--- a/src/sass/_scaffolding.sass
+++ b/src/sass/_scaffolding.sass
@@ -71,7 +71,6 @@ h4
 					background-color: $black
 					border-color: $white
 
-
 // grid
 .row
 	+clr
@@ -158,3 +157,18 @@ h4
 		a
 			padding: 0 10px
 			display: inline-block
+
+// login
+.login
+	display: inline-block
+	font-size: 0
+	span,
+	.icon
+		display: inline-block
+		vertical-align: middle
+	span
+		color: $black-lighten
+		font-size: $text-sm
+		margin-right: 38px
+		letter-spacing: .20rem
+		font-weight: 700
