--- a/src/sass/part/_button.sass
+++ b/src/sass/part/_button.sass
@@ -15,11 +15,11 @@
 		background-color: $black
 	&:focus
 		background-color: rgba($black, .6)
-	&-large
+	&_large
 		max-width: 280px
 		width: 100%
 		padding: 18px 10px
-	&-small
+	&_small
 		font-size: 0
 		.icon,
 		span
@@ -29,19 +29,19 @@
 			letter-spacing: .2em
 		.icon
 			margin-right: 15px
-	&-block
+	&_block
 		display: block
-	&-search
+	&_search
 		margin-left: 33px
 		padding: 7px
-	&-menu
+	&_menu
 		width: 32px
 		height: 32px
 		line-height: 32px
 		text-align: center
 		background-color: $pink
 		border-radius: 50%
-	&-next
+	&_next
 		font-size: 0
 		span,.icon
 			vertical-align: middle
