--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -4,16 +4,16 @@
 		<div class="footer__content">
 			<div class="row">
 				<div class="col col-20">
-					<div class="item">
+					<div class="sm-item">
 						<div class="logo footer__logo">
 							<img src="img/logo.png" alt="THEBOTTLE">
 						</div>
 					</div>
 				</div>
 				<div class="col col-20">
-					<div class="item">
-						<div class="item__title">категории</div>
-						<ul class="item__list">
+					<div class="sm-item">
+						<div class="sm-item__title">категории</div>
+						<ul class="sm-item__list">
 							<li><a href="#">Крепкие напитки</a></li>
 							<li><a href="#">Ликеры</a></li>
 							<li><a href="#">Вина и игристые вина</a></li>
@@ -22,9 +22,9 @@
 					</div>
 				</div>
 				<div class="col col-20">
-					<div class="item">
-						<div class="item__title">информация</div>
-						<ul class="item__list">
+					<div class="sm-item">
+						<div class="sm-item__title">информация</div>
+						<ul class="sm-item__list">
 							<li><a href="#">О магазине</a></li>
 							<li><a href="#">Доставка и оплата</a></li>
 							<li><a href="#">Условия работы</a></li>
@@ -33,9 +33,9 @@
 					</div>
 				</div>
 				<div class="col col-22">
-					<div class="item">
-						<div class="item__title">Акции и новости</div>
-						<div class="item__input">
+					<div class="sm-item">
+						<div class="sm-item__title">Акции и новости</div>
+						<div class="sm-item__input">
 							<div class="input__address">
 								<input type="text" placeholder="Адрес электронной почты">
 								<button type="submit"><i class="icon icon-input-arrow"></i></button>
@@ -44,9 +44,9 @@
 					</div>
 				</div>
 				<div class="col col-18">
-					<div class="item">
-						<div class="item__title">мы в соц. сетях</div>
-						<div class="item__social">
+					<div class="sm-item">
+						<div class="sm-item__title">мы в соц. сетях</div>
+						<div class="sm-item__social">
 							<ul class="social">
 								<li><a href="#"><i class="icon icon-facebook"></i></a></li>
 								<li><a href="#"><i class="icon icon-instagram"></i></a></li>
