--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -1,12 +1,12 @@
 <!-- header BEGIN -->
 <header class="header">
 	<div class="inner">
-		<div class="header-left">
-			<a href="#" class="header-btn btn-menu"><i class="icon icon-menu"></i></a>
-			<a href="#" class="header-btn btn-search"><i class="icon icon-search"></i></a>
+		<div class="header_left">
+			<a href="#" class="header_btn btn_menu"><i class="icon icon-menu"></i></a>
+			<a href="#" class="header_btn btn_search"><i class="icon icon-search"></i></a>
 		</div>
 		<a href="index.html" class="logo header__logo"><img src="img/logo.png" alt="THEBOTTLE"></a>
-		<div class="header-right">
+		<div class="header_right">
 			<a href="#" class="header__login">
 				<span>войти</span>
 				<i class="icon icon-login"></i>
