--- a/src/sass/part/_header.sass
+++ b/src/sass/part/_header.sass
@@ -3,12 +3,14 @@
 	height: 80px
 	background-color: $white
 	padding: 24px 0
-	&-left
+	&_left
 		float: left
-	&-right
+	&_right
 		float: right
 		font-size: 0
-	&-btn
+		.login
+			padding-top: 6px
+	&_btn
 		display: inline-block
 		vertical-align: middle
 	&__logo
@@ -16,18 +18,4 @@
 		left: 50%
 		top: 50%
 		transform: translate(-50%, -50%)
-	&__login
-		display: inline-block
-		font-size: 0
-		padding-top: 6px
-		span,
-		.icon
-			display: inline-block
-			vertical-align: middle
-		span
-			color: $black-lighten
-			font-size: $text-sm
-			margin-right: 38px
-			letter-spacing: .20rem
-			font-weight: 700
 
