--- a/src/sass/part/_header.sass
+++ b/src/sass/part/_header.sass
@@ -3,14 +3,14 @@
 	height: 80px
 	background-color: $white
 	padding: 24px 0
-	&_left
+	&__left
 		float: left
-	&_right
+	&__right
 		float: right
 		font-size: 0
 		.login
 			padding-top: 6px
-	&_btn
+	&__btn
 		display: inline-block
 		vertical-align: middle
 	&__logo
