--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -56,7 +56,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="footer_bottom">
+		<div class="footer__bottom">
 			<div class="footer__copyright text">© TheBottle, 2018. Все права защищены </div>
 			<div class="footer__created text">Created by Naprienko</div>
 		</div>
