--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -37,8 +37,10 @@
 						<div class="sm-item__title">Акции и новости</div>
 						<div class="sm-item__input">
 							<div class="input__address">
-								<input type="text" placeholder="Адрес электронной почты">
-								<button type="submit"><i class="icon icon-input-arrow"></i></button>
+								<form action="/">
+									<input type="text" placeholder="Адрес электронной почты">
+									<button><i class="icon icon-input-arrow"></i></button>
+								</form>
 							</div>
 						</div>
 					</div>
