--- a/src/sass/part/_button.sass
+++ b/src/sass/part/_button.sass
@@ -51,3 +51,15 @@
 			color: $white
 			letter-spacing: .05em
 			margin-right: 10px
+	&_login
+		display: inline-block
+		vertical-align: middle
+		margin-right: 38px
+		span
+			color: $black-lighten
+			font-size: $text-sm
+			letter-spacing: .20rem
+			font-weight: 700
+	&_basket
+		display: inline-block
+		vertical-align: middle
