--- a/src/sass/part/_icon.sass
+++ b/src/sass/part/_icon.sass
@@ -24,3 +24,11 @@
 		+sprite($s-icon-facebook)
 	&-instagram
 		+sprite($s-icon-instagram)
+	&-wine
+		+sprite($s-icon-wine)
+	&-vermouth
+		+sprite($s-icon-vermouth)
+	&-alcohol
+		+sprite($s-icon-strong-alcohol)
+	&-liqueurs
+		+sprite($s-icon-liqueurs)
