--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -28,9 +28,41 @@ title: TheBottle Main
 							</div>
 						</div>
 					</div>
+					<div class="slider__item" style="background-image: url('img/slider-bg-00.png');">
+						<div class="inner">
+							<div class="slider__content">
+								<div class="slider__wrapper">
+									<div class="slider__content_left">
+										<h2>Jack Daniel’s Honey</h2>
+										<p>Американский виски, который имеет насыщенный аромат и мягкий вкус с нотками дыма.</p>
+										<a href="#" class="btn btn_large">купить сейчас</a>
+									</div>
+									<div class="slider__label">
+										<span class="label">премиальный виски</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="slider__item" style="background-image: url('img/slider-bg-00.png');">
+						<div class="inner">
+							<div class="slider__content">
+								<div class="slider__wrapper">
+									<div class="slider__content_left">
+										<h2>Jack Daniel’s Honey</h2>
+										<p>Американский виски, который имеет насыщенный аромат и мягкий вкус с нотками дыма.</p>
+										<a href="#" class="btn btn_large">купить сейчас</a>
+									</div>
+									<div class="slider__label">
+										<span class="label">премиальный виски</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
-			<div class="preview__btn">
+			<div class="preview__btn js-slick-dots">
 				<a href="#product" class="btn_next js-scroll-to"><span>смотреть далее</span><i class="icon icon-mouse"></i></a>
 			</div>
 		</div>
