--- a/src/sass/helpers/_sprite.sass
+++ b/src/sass/helpers/_sprite.sass
@@ -9,142 +9,230 @@
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites
 $s-icon-basket-name: 's-icon-basket'
-$s-icon-basket-x: 21px
-$s-icon-basket-y: 0px
-$s-icon-basket-offset-x: -21px
-$s-icon-basket-offset-y: 0px
+$s-icon-basket-x: 0px
+$s-icon-basket-y: 150px
+$s-icon-basket-offset-x: 0px
+$s-icon-basket-offset-y: -150px
 $s-icon-basket-width: 16px
 $s-icon-basket-height: 20px
-$s-icon-basket-total-width: 73px
-$s-icon-basket-total-height: 73px
+$s-icon-basket-total-width: 249px
+$s-icon-basket-total-height: 170px
 $s-icon-basket-image: '../img/sprite.png'
-$s-icon-basket: (21px, 0px, -21px, 0px, 16px, 20px, 73px, 73px, '../img/sprite.png', 's-icon-basket', )
+$s-icon-basket: (0px, 150px, 0px, -150px, 16px, 20px, 249px, 170px, '../img/sprite.png', 's-icon-basket', )
 $s-icon-facebook-name: 's-icon-facebook'
-$s-icon-facebook-x: 0px
-$s-icon-facebook-y: 25px
-$s-icon-facebook-offset-x: 0px
-$s-icon-facebook-offset-y: -25px
+$s-icon-facebook-x: 42px
+$s-icon-facebook-y: 150px
+$s-icon-facebook-offset-x: -42px
+$s-icon-facebook-offset-y: -150px
 $s-icon-facebook-width: 16px
 $s-icon-facebook-height: 16px
-$s-icon-facebook-total-width: 73px
-$s-icon-facebook-total-height: 73px
+$s-icon-facebook-total-width: 249px
+$s-icon-facebook-total-height: 170px
 $s-icon-facebook-image: '../img/sprite.png'
-$s-icon-facebook: (0px, 25px, 0px, -25px, 16px, 16px, 73px, 73px, '../img/sprite.png', 's-icon-facebook', )
+$s-icon-facebook: (42px, 150px, -42px, -150px, 16px, 16px, 249px, 170px, '../img/sprite.png', 's-icon-facebook', )
 $s-icon-hearth-name: 's-icon-hearth'
-$s-icon-hearth-x: 42px
-$s-icon-hearth-y: 25px
-$s-icon-hearth-offset-x: -42px
-$s-icon-hearth-offset-y: -25px
+$s-icon-hearth-x: 105px
+$s-icon-hearth-y: 150px
+$s-icon-hearth-offset-x: -105px
+$s-icon-hearth-offset-y: -150px
 $s-icon-hearth-width: 16px
 $s-icon-hearth-height: 14px
-$s-icon-hearth-total-width: 73px
-$s-icon-hearth-total-height: 73px
+$s-icon-hearth-total-width: 249px
+$s-icon-hearth-total-height: 170px
 $s-icon-hearth-image: '../img/sprite.png'
-$s-icon-hearth: (42px, 25px, -42px, -25px, 16px, 14px, 73px, 73px, '../img/sprite.png', 's-icon-hearth', )
+$s-icon-hearth: (105px, 150px, -105px, -150px, 16px, 14px, 249px, 170px, '../img/sprite.png', 's-icon-hearth', )
 $s-icon-input-arrow-name: 's-icon-input-arrow'
-$s-icon-input-arrow-x: 34px
-$s-icon-input-arrow-y: 46px
-$s-icon-input-arrow-offset-x: -34px
-$s-icon-input-arrow-offset-y: -46px
+$s-icon-input-arrow-x: 145px
+$s-icon-input-arrow-y: 150px
+$s-icon-input-arrow-offset-x: -145px
+$s-icon-input-arrow-offset-y: -150px
 $s-icon-input-arrow-width: 12px
 $s-icon-input-arrow-height: 6px
-$s-icon-input-arrow-total-width: 73px
-$s-icon-input-arrow-total-height: 73px
+$s-icon-input-arrow-total-width: 249px
+$s-icon-input-arrow-total-height: 170px
 $s-icon-input-arrow-image: '../img/sprite.png'
-$s-icon-input-arrow: (34px, 46px, -34px, -46px, 12px, 6px, 73px, 73px, '../img/sprite.png', 's-icon-input-arrow', )
+$s-icon-input-arrow: (145px, 150px, -145px, -150px, 12px, 6px, 249px, 170px, '../img/sprite.png', 's-icon-input-arrow', )
 $s-icon-instagram-name: 's-icon-instagram'
-$s-icon-instagram-x: 42px
-$s-icon-instagram-y: 0px
-$s-icon-instagram-offset-x: -42px
-$s-icon-instagram-offset-y: 0px
+$s-icon-instagram-x: 63px
+$s-icon-instagram-y: 150px
+$s-icon-instagram-offset-x: -63px
+$s-icon-instagram-offset-y: -150px
 $s-icon-instagram-width: 16px
 $s-icon-instagram-height: 16px
-$s-icon-instagram-total-width: 73px
-$s-icon-instagram-total-height: 73px
+$s-icon-instagram-total-width: 249px
+$s-icon-instagram-total-height: 170px
 $s-icon-instagram-image: '../img/sprite.png'
-$s-icon-instagram: (42px, 0px, -42px, 0px, 16px, 16px, 73px, 73px, '../img/sprite.png', 's-icon-instagram', )
+$s-icon-instagram: (63px, 150px, -63px, -150px, 16px, 16px, 249px, 170px, '../img/sprite.png', 's-icon-instagram', )
+$s-icon-liqueurs-active-name: 's-icon-liqueurs-active'
+$s-icon-liqueurs-active-x: 69px
+$s-icon-liqueurs-active-y: 0px
+$s-icon-liqueurs-active-offset-x: -69px
+$s-icon-liqueurs-active-offset-y: 0px
+$s-icon-liqueurs-active-width: 64px
+$s-icon-liqueurs-active-height: 70px
+$s-icon-liqueurs-active-total-width: 249px
+$s-icon-liqueurs-active-total-height: 170px
+$s-icon-liqueurs-active-image: '../img/sprite.png'
+$s-icon-liqueurs-active: (69px, 0px, -69px, 0px, 64px, 70px, 249px, 170px, '../img/sprite.png', 's-icon-liqueurs-active', )
+$s-icon-liqueurs-name: 's-icon-liqueurs'
+$s-icon-liqueurs-x: 0px
+$s-icon-liqueurs-y: 0px
+$s-icon-liqueurs-offset-x: 0px
+$s-icon-liqueurs-offset-y: 0px
+$s-icon-liqueurs-width: 64px
+$s-icon-liqueurs-height: 70px
+$s-icon-liqueurs-total-width: 249px
+$s-icon-liqueurs-total-height: 170px
+$s-icon-liqueurs-image: '../img/sprite.png'
+$s-icon-liqueurs: (0px, 0px, 0px, 0px, 64px, 70px, 249px, 170px, '../img/sprite.png', 's-icon-liqueurs', )
 $s-icon-login-name: 's-icon-login'
-$s-icon-login-x: 0px
-$s-icon-login-y: 0px
-$s-icon-login-offset-x: 0px
-$s-icon-login-offset-y: 0px
+$s-icon-login-x: 21px
+$s-icon-login-y: 150px
+$s-icon-login-offset-x: -21px
+$s-icon-login-offset-y: -150px
 $s-icon-login-width: 16px
 $s-icon-login-height: 20px
-$s-icon-login-total-width: 73px
-$s-icon-login-total-height: 73px
+$s-icon-login-total-width: 249px
+$s-icon-login-total-height: 170px
 $s-icon-login-image: '../img/sprite.png'
-$s-icon-login: (0px, 0px, 0px, 0px, 16px, 20px, 73px, 73px, '../img/sprite.png', 's-icon-login', )
+$s-icon-login: (21px, 150px, -21px, -150px, 16px, 20px, 249px, 170px, '../img/sprite.png', 's-icon-login', )
 $s-icon-menu-name: 's-icon-menu'
-$s-icon-menu-x: 0px
-$s-icon-menu-y: 46px
-$s-icon-menu-offset-x: 0px
-$s-icon-menu-offset-y: -46px
+$s-icon-menu-x: 126px
+$s-icon-menu-y: 150px
+$s-icon-menu-offset-x: -126px
+$s-icon-menu-offset-y: -150px
 $s-icon-menu-width: 14px
 $s-icon-menu-height: 10px
-$s-icon-menu-total-width: 73px
-$s-icon-menu-total-height: 73px
+$s-icon-menu-total-width: 249px
+$s-icon-menu-total-height: 170px
 $s-icon-menu-image: '../img/sprite.png'
-$s-icon-menu: (0px, 46px, 0px, -46px, 14px, 10px, 73px, 73px, '../img/sprite.png', 's-icon-menu', )
+$s-icon-menu: (126px, 150px, -126px, -150px, 14px, 10px, 249px, 170px, '../img/sprite.png', 's-icon-menu', )
 $s-icon-mouse-name: 's-icon-mouse'
-$s-icon-mouse-x: 63px
-$s-icon-mouse-y: 0px
-$s-icon-mouse-offset-x: -63px
-$s-icon-mouse-offset-y: 0px
+$s-icon-mouse-x: 181px
+$s-icon-mouse-y: 75px
+$s-icon-mouse-offset-x: -181px
+$s-icon-mouse-offset-y: -75px
 $s-icon-mouse-width: 10px
 $s-icon-mouse-height: 16px
-$s-icon-mouse-total-width: 73px
-$s-icon-mouse-total-height: 73px
+$s-icon-mouse-total-width: 249px
+$s-icon-mouse-total-height: 170px
 $s-icon-mouse-image: '../img/sprite.png'
-$s-icon-mouse: (63px, 0px, -63px, 0px, 10px, 16px, 73px, 73px, '../img/sprite.png', 's-icon-mouse', )
+$s-icon-mouse: (181px, 75px, -181px, -75px, 10px, 16px, 249px, 170px, '../img/sprite.png', 's-icon-mouse', )
 $s-icon-search-name: 's-icon-search'
-$s-icon-search-x: 21px
-$s-icon-search-y: 25px
-$s-icon-search-offset-x: -21px
-$s-icon-search-offset-y: -25px
+$s-icon-search-x: 84px
+$s-icon-search-y: 150px
+$s-icon-search-offset-x: -84px
+$s-icon-search-offset-y: -150px
 $s-icon-search-width: 16px
 $s-icon-search-height: 16px
-$s-icon-search-total-width: 73px
-$s-icon-search-total-height: 73px
+$s-icon-search-total-width: 249px
+$s-icon-search-total-height: 170px
 $s-icon-search-image: '../img/sprite.png'
-$s-icon-search: (21px, 25px, -21px, -25px, 16px, 16px, 73px, 73px, '../img/sprite.png', 's-icon-search', )
+$s-icon-search: (84px, 150px, -84px, -150px, 16px, 16px, 249px, 170px, '../img/sprite.png', 's-icon-search', )
 $s-icon-star-full-name: 's-icon-star-full'
-$s-icon-star-full-x: 63px
-$s-icon-star-full-y: 21px
-$s-icon-star-full-offset-x: -63px
-$s-icon-star-full-offset-y: -21px
+$s-icon-star-full-x: 181px
+$s-icon-star-full-y: 96px
+$s-icon-star-full-offset-x: -181px
+$s-icon-star-full-offset-y: -96px
 $s-icon-star-full-width: 10px
 $s-icon-star-full-height: 10px
-$s-icon-star-full-total-width: 73px
-$s-icon-star-full-total-height: 73px
+$s-icon-star-full-total-width: 249px
+$s-icon-star-full-total-height: 170px
 $s-icon-star-full-image: '../img/sprite.png'
-$s-icon-star-full: (63px, 21px, -63px, -21px, 10px, 10px, 73px, 73px, '../img/sprite.png', 's-icon-star-full', )
+$s-icon-star-full: (181px, 96px, -181px, -96px, 10px, 10px, 249px, 170px, '../img/sprite.png', 's-icon-star-full', )
 $s-icon-star-name: 's-icon-star'
-$s-icon-star-x: 19px
-$s-icon-star-y: 46px
-$s-icon-star-offset-x: -19px
-$s-icon-star-offset-y: -46px
+$s-icon-star-x: 181px
+$s-icon-star-y: 111px
+$s-icon-star-offset-x: -181px
+$s-icon-star-offset-y: -111px
 $s-icon-star-width: 10px
 $s-icon-star-height: 10px
-$s-icon-star-total-width: 73px
-$s-icon-star-total-height: 73px
+$s-icon-star-total-width: 249px
+$s-icon-star-total-height: 170px
 $s-icon-star-image: '../img/sprite.png'
-$s-icon-star: (19px, 46px, -19px, -46px, 10px, 10px, 73px, 73px, '../img/sprite.png', 's-icon-star', )
+$s-icon-star: (181px, 111px, -181px, -111px, 10px, 10px, 249px, 170px, '../img/sprite.png', 's-icon-star', )
+$s-icon-strong-alcohol-active-name: 's-icon-strong-alcohol-active'
+$s-icon-strong-alcohol-active-x: 0px
+$s-icon-strong-alcohol-active-y: 75px
+$s-icon-strong-alcohol-active-offset-x: 0px
+$s-icon-strong-alcohol-active-offset-y: -75px
+$s-icon-strong-alcohol-active-width: 56px
+$s-icon-strong-alcohol-active-height: 70px
+$s-icon-strong-alcohol-active-total-width: 249px
+$s-icon-strong-alcohol-active-total-height: 170px
+$s-icon-strong-alcohol-active-image: '../img/sprite.png'
+$s-icon-strong-alcohol-active: (0px, 75px, 0px, -75px, 56px, 70px, 249px, 170px, '../img/sprite.png', 's-icon-strong-alcohol-active', )
+$s-icon-strong-alcohol-name: 's-icon-strong-alcohol'
+$s-icon-strong-alcohol-x: 138px
+$s-icon-strong-alcohol-y: 0px
+$s-icon-strong-alcohol-offset-x: -138px
+$s-icon-strong-alcohol-offset-y: 0px
+$s-icon-strong-alcohol-width: 56px
+$s-icon-strong-alcohol-height: 70px
+$s-icon-strong-alcohol-total-width: 249px
+$s-icon-strong-alcohol-total-height: 170px
+$s-icon-strong-alcohol-image: '../img/sprite.png'
+$s-icon-strong-alcohol: (138px, 0px, -138px, 0px, 56px, 70px, 249px, 170px, '../img/sprite.png', 's-icon-strong-alcohol', )
 $s-icon-up-name: 's-icon-up'
-$s-icon-up-x: 0px
-$s-icon-up-y: 61px
-$s-icon-up-offset-x: 0px
-$s-icon-up-offset-y: -61px
+$s-icon-up-x: 181px
+$s-icon-up-y: 126px
+$s-icon-up-offset-x: -181px
+$s-icon-up-offset-y: -126px
 $s-icon-up-width: 6px
 $s-icon-up-height: 12px
-$s-icon-up-total-width: 73px
-$s-icon-up-total-height: 73px
+$s-icon-up-total-width: 249px
+$s-icon-up-total-height: 170px
 $s-icon-up-image: '../img/sprite.png'
-$s-icon-up: (0px, 61px, 0px, -61px, 6px, 12px, 73px, 73px, '../img/sprite.png', 's-icon-up', )
-$spritesheet-width: 73px
-$spritesheet-height: 73px
+$s-icon-up: (181px, 126px, -181px, -126px, 6px, 12px, 249px, 170px, '../img/sprite.png', 's-icon-up', )
+$s-icon-vermouth-active-name: 's-icon-vermouth-active'
+$s-icon-vermouth-active-x: 121px
+$s-icon-vermouth-active-y: 75px
+$s-icon-vermouth-active-offset-x: -121px
+$s-icon-vermouth-active-offset-y: -75px
+$s-icon-vermouth-active-width: 55px
+$s-icon-vermouth-active-height: 70px
+$s-icon-vermouth-active-total-width: 249px
+$s-icon-vermouth-active-total-height: 170px
+$s-icon-vermouth-active-image: '../img/sprite.png'
+$s-icon-vermouth-active: (121px, 75px, -121px, -75px, 55px, 70px, 249px, 170px, '../img/sprite.png', 's-icon-vermouth-active', )
+$s-icon-vermouth-name: 's-icon-vermouth'
+$s-icon-vermouth-x: 61px
+$s-icon-vermouth-y: 75px
+$s-icon-vermouth-offset-x: -61px
+$s-icon-vermouth-offset-y: -75px
+$s-icon-vermouth-width: 55px
+$s-icon-vermouth-height: 70px
+$s-icon-vermouth-total-width: 249px
+$s-icon-vermouth-total-height: 170px
+$s-icon-vermouth-image: '../img/sprite.png'
+$s-icon-vermouth: (61px, 75px, -61px, -75px, 55px, 70px, 249px, 170px, '../img/sprite.png', 's-icon-vermouth', )
+$s-icon-wine-active-name: 's-icon-wine-active'
+$s-icon-wine-active-x: 199px
+$s-icon-wine-active-y: 75px
+$s-icon-wine-active-offset-x: -199px
+$s-icon-wine-active-offset-y: -75px
+$s-icon-wine-active-width: 50px
+$s-icon-wine-active-height: 70px
+$s-icon-wine-active-total-width: 249px
+$s-icon-wine-active-total-height: 170px
+$s-icon-wine-active-image: '../img/sprite.png'
+$s-icon-wine-active: (199px, 75px, -199px, -75px, 50px, 70px, 249px, 170px, '../img/sprite.png', 's-icon-wine-active', )
+$s-icon-wine-name: 's-icon-wine'
+$s-icon-wine-x: 199px
+$s-icon-wine-y: 0px
+$s-icon-wine-offset-x: -199px
+$s-icon-wine-offset-y: 0px
+$s-icon-wine-width: 50px
+$s-icon-wine-height: 70px
+$s-icon-wine-total-width: 249px
+$s-icon-wine-total-height: 170px
+$s-icon-wine-image: '../img/sprite.png'
+$s-icon-wine: (199px, 0px, -199px, 0px, 50px, 70px, 249px, 170px, '../img/sprite.png', 's-icon-wine', )
+$spritesheet-width: 249px
+$spritesheet-height: 170px
 $spritesheet-image: '../img/sprite.png'
-$spritesheet-sprites: ($s-icon-basket, $s-icon-facebook, $s-icon-hearth, $s-icon-input-arrow, $s-icon-instagram, $s-icon-login, $s-icon-menu, $s-icon-mouse, $s-icon-search, $s-icon-star-full, $s-icon-star, $s-icon-up, )
-$spritesheet: (73px, 73px, '../img/sprite.png', $spritesheet-sprites, )
+$spritesheet-sprites: ($s-icon-basket, $s-icon-facebook, $s-icon-hearth, $s-icon-input-arrow, $s-icon-instagram, $s-icon-liqueurs-active, $s-icon-liqueurs, $s-icon-login, $s-icon-menu, $s-icon-mouse, $s-icon-search, $s-icon-star-full, $s-icon-star, $s-icon-strong-alcohol-active, $s-icon-strong-alcohol, $s-icon-up, $s-icon-vermouth-active, $s-icon-vermouth, $s-icon-wine-active, $s-icon-wine, )
+$spritesheet: (249px, 170px, '../img/sprite.png', $spritesheet-sprites, )
 
 // The provided mixins are intended to be used with the array-like variables
 //
