--- a/src/sass/part/_header.sass
+++ b/src/sass/part/_header.sass
@@ -1,15 +1,16 @@
 .header
-	position: relative
-	height: 80px
 	background-color: $white
-	padding: 24px 0
+	&__wrapper
+		padding: 24px 0
+		height: 80px
+		position: relative
+		+clr
 	&__left
 		float: left
 	&__right
 		float: right
 		font-size: 0
-		.login
-			padding-top: 6px
+		padding-top: 6px
 	&__btn
 		display: inline-block
 		vertical-align: middle
