--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -1,16 +1,100 @@
 <!-- header BEGIN -->
 <header class="header">
 	<div class="inner">
-		<div class="header__left">
-			<a href="#" class="header__btn btn_menu"><i class="icon icon-menu"></i></a>
-			<a href="#" class="header__btn btn_search"><i class="icon icon-search"></i></a>
+		<div class="header__wrapper">
+			<div class="header__left">
+				<a href="#" class="header__btn btn_menu"><i class="icon icon-menu"></i></a>
+				<a href="#" class="header__btn btn_search"><i class="icon icon-search"></i></a>
+			</div>
+			<a href="index.html" class="logo header__logo"><img src="img/logo.png" alt="THEBOTTLE"></a>
+			<div class="header__right">
+				<a href="#" class="btn_login">
+					<span>войти</span>
+				</a>
+				<a href="#" class="btn_basket"><i class="icon icon-login"></i></a>
+			</div>
 		</div>
-		<a href="index.html" class="logo header__logo"><img src="img/logo.png" alt="THEBOTTLE"></a>
-		<div class="header__right">
-			<a href="#" class="login">
-				<span>войти</span>
-				<i class="icon icon-login"></i>
-			</a>
+		<div class="header__menu">
+			<div class="menu">
+				<div class="row">
+					<div class="col col-3">
+						<div class="simple-item">
+							<div class="simple-item__title">
+								<div class="simple-item__icon">
+									<i class="icon icon-alcohol"></i>
+								</div>
+								<span>крепкие напитки</span>
+							</div>
+							<ul class="dropdown simple-item__dropdown">
+								<li><a href="#">виски</a></li>
+								<li><a href="#">бренди</a></li>
+								<li><a href="#">ром</a></li>
+								<li><a href="#">джин</a></li>
+								<li><a href="#">текила</a></li>
+								<li><a href="#">водка</a></li>
+								<li><a href="#">абсент</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col col-3">
+						<div class="simple-item">
+							<div class="simple-item__title">
+								<div class="simple-item__icon">
+									<i class="icon icon-liqueurs"></i>
+								</div>
+								<span>ликеры</span>
+							</div>
+							<ul class="dropdown simple-item__dropdown">
+								<li><a href="#">виски</a></li>
+								<li><a href="#">бренди</a></li>
+								<li><a href="#">ром</a></li>
+								<li><a href="#">джин</a></li>
+								<li><a href="#">текила</a></li>
+								<li><a href="#">водка</a></li>
+								<li><a href="#">абсент</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col col-3">
+						<div class="simple-item">
+							<div class="simple-item__title">
+								<div class="simple-item__icon">
+									<i class="icon icon-wine"></i>
+								</div>
+								<span>вина и игристые вина</span>
+							</div>
+							<ul class="dropdown simple-item__dropdown">
+								<li><a href="#">виски</a></li>
+								<li><a href="#">бренди</a></li>
+								<li><a href="#">ром</a></li>
+								<li><a href="#">джин</a></li>
+								<li><a href="#">текила</a></li>
+								<li><a href="#">водка</a></li>
+								<li><a href="#">абсент</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col col-3">
+						<div class="simple-item">
+							<div class="simple-item__title">
+								<div class="simple-item__icon">
+									<i class="icon icon-vermouth"></i>
+								</div>
+								<span>вермуты</span>
+							</div>
+							<ul class="dropdown simple-item__dropdown">
+								<li><a href="#">виски</a></li>
+								<li><a href="#">бренди</a></li>
+								<li><a href="#">ром</a></li>
+								<li><a href="#">джин</a></li>
+								<li><a href="#">текила</a></li>
+								<li><a href="#">водка</a></li>
+								<li><a href="#">абсент</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </header>
