add header menu

--- a/src/sass/part/_button.sass
+++ b/src/sass/part/_button.sass
@@ -41,6 +41,9 @@
 		text-align: center
 		background-color: $pink
 		border-radius: 50%
+		&.active
+			.icon-menu
+				+sprite($s-icon-close)
 	&_next
 		font-size: 0
 		span,.icon
