--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -14,8 +14,10 @@
 				<a href="#" class="btn_basket"><i class="icon icon-login"></i></a>
 			</div>
 		</div>
-		<div class="header__menu">
-			<div class="menu">
+	</div>
+	<div class="header__menu">
+		<div class="menu">
+			<div class="inner">
 				<div class="row">
 					<div class="col col-3">
 						<div class="simple-item">
