--- a/src/sass/_scaffolding.sass
+++ b/src/sass/_scaffolding.sass
@@ -4,6 +4,7 @@ body
 	color: $black-lighten
 	+font-family($exo)
 	font-weight: 400
+	min-width: 1100px
 p,a,span,input,h1,h2,h3,h4,h5,h6
 	letter-spacing: .025em
 a
@@ -38,7 +39,6 @@ h4
 	line-height: 1.33
 .inner
 	max-width: 1100px
-	min-width: 1100px
 	width: 100%
 	padding: 0 10px
 	margin: 0 auto
@@ -155,6 +155,7 @@ h4
 // menu
 .menu
 	padding: 20px 0
+	border-top: 1px solid #9ea2a8
 
 // dropdown
 .dropdown
@@ -178,7 +179,7 @@ h4
 		+arr(10, 5, $white, t)
 	li
 		a
-			padding: 8px 0
+			padding: 9px 0
 			letter-spacing: .2em
 			font-size: 10px
 			display: block
