--- a/src/sass/helpers/_sprite.sass
+++ b/src/sass/helpers/_sprite.sass
@@ -9,16 +9,27 @@
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites
 $s-icon-basket-name: 's-icon-basket'
-$s-icon-basket-x: 0px
+$s-icon-basket-x: 21px
 $s-icon-basket-y: 150px
-$s-icon-basket-offset-x: 0px
+$s-icon-basket-offset-x: -21px
 $s-icon-basket-offset-y: -150px
 $s-icon-basket-width: 16px
 $s-icon-basket-height: 20px
 $s-icon-basket-total-width: 249px
-$s-icon-basket-total-height: 170px
+$s-icon-basket-total-height: 187px
 $s-icon-basket-image: '../img/sprite.png'
-$s-icon-basket: (0px, 150px, 0px, -150px, 16px, 20px, 249px, 170px, '../img/sprite.png', 's-icon-basket', )
+$s-icon-basket: (21px, 150px, -21px, -150px, 16px, 20px, 249px, 187px, '../img/sprite.png', 's-icon-basket', )
+$s-icon-close-name: 's-icon-close'
+$s-icon-close-x: 181px
+$s-icon-close-y: 96px
+$s-icon-close-offset-x: -181px
+$s-icon-close-offset-y: -96px
+$s-icon-close-width: 12px
+$s-icon-close-height: 12px
+$s-icon-close-total-width: 249px
+$s-icon-close-total-height: 187px
+$s-icon-close-image: '../img/sprite.png'
+$s-icon-close: (181px, 96px, -181px, -96px, 12px, 12px, 249px, 187px, '../img/sprite.png', 's-icon-close', )
 $s-icon-facebook-name: 's-icon-facebook'
 $s-icon-facebook-x: 42px
 $s-icon-facebook-y: 150px
@@ -27,9 +38,9 @@ $s-icon-facebook-offset-y: -150px
 $s-icon-facebook-width: 16px
 $s-icon-facebook-height: 16px
 $s-icon-facebook-total-width: 249px
-$s-icon-facebook-total-height: 170px
+$s-icon-facebook-total-height: 187px
 $s-icon-facebook-image: '../img/sprite.png'
-$s-icon-facebook: (42px, 150px, -42px, -150px, 16px, 16px, 249px, 170px, '../img/sprite.png', 's-icon-facebook', )
+$s-icon-facebook: (42px, 150px, -42px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-facebook', )
 $s-icon-hearth-name: 's-icon-hearth'
 $s-icon-hearth-x: 105px
 $s-icon-hearth-y: 150px
@@ -38,9 +49,9 @@ $s-icon-hearth-offset-y: -150px
 $s-icon-hearth-width: 16px
 $s-icon-hearth-height: 14px
 $s-icon-hearth-total-width: 249px
-$s-icon-hearth-total-height: 170px
+$s-icon-hearth-total-height: 187px
 $s-icon-hearth-image: '../img/sprite.png'
-$s-icon-hearth: (105px, 150px, -105px, -150px, 16px, 14px, 249px, 170px, '../img/sprite.png', 's-icon-hearth', )
+$s-icon-hearth: (105px, 150px, -105px, -150px, 16px, 14px, 249px, 187px, '../img/sprite.png', 's-icon-hearth', )
 $s-icon-input-arrow-name: 's-icon-input-arrow'
 $s-icon-input-arrow-x: 145px
 $s-icon-input-arrow-y: 150px
@@ -49,9 +60,9 @@ $s-icon-input-arrow-offset-y: -150px
 $s-icon-input-arrow-width: 12px
 $s-icon-input-arrow-height: 6px
 $s-icon-input-arrow-total-width: 249px
-$s-icon-input-arrow-total-height: 170px
+$s-icon-input-arrow-total-height: 187px
 $s-icon-input-arrow-image: '../img/sprite.png'
-$s-icon-input-arrow: (145px, 150px, -145px, -150px, 12px, 6px, 249px, 170px, '../img/sprite.png', 's-icon-input-arrow', )
+$s-icon-input-arrow: (145px, 150px, -145px, -150px, 12px, 6px, 249px, 187px, '../img/sprite.png', 's-icon-input-arrow', )
 $s-icon-instagram-name: 's-icon-instagram'
 $s-icon-instagram-x: 63px
 $s-icon-instagram-y: 150px
@@ -60,42 +71,42 @@ $s-icon-instagram-offset-y: -150px
 $s-icon-instagram-width: 16px
 $s-icon-instagram-height: 16px
 $s-icon-instagram-total-width: 249px
-$s-icon-instagram-total-height: 170px
+$s-icon-instagram-total-height: 187px
 $s-icon-instagram-image: '../img/sprite.png'
-$s-icon-instagram: (63px, 150px, -63px, -150px, 16px, 16px, 249px, 170px, '../img/sprite.png', 's-icon-instagram', )
+$s-icon-instagram: (63px, 150px, -63px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-instagram', )
 $s-icon-liqueurs-active-name: 's-icon-liqueurs-active'
-$s-icon-liqueurs-active-x: 69px
+$s-icon-liqueurs-active-x: 0px
 $s-icon-liqueurs-active-y: 0px
-$s-icon-liqueurs-active-offset-x: -69px
+$s-icon-liqueurs-active-offset-x: 0px
 $s-icon-liqueurs-active-offset-y: 0px
 $s-icon-liqueurs-active-width: 64px
 $s-icon-liqueurs-active-height: 70px
 $s-icon-liqueurs-active-total-width: 249px
-$s-icon-liqueurs-active-total-height: 170px
+$s-icon-liqueurs-active-total-height: 187px
 $s-icon-liqueurs-active-image: '../img/sprite.png'
-$s-icon-liqueurs-active: (69px, 0px, -69px, 0px, 64px, 70px, 249px, 170px, '../img/sprite.png', 's-icon-liqueurs-active', )
+$s-icon-liqueurs-active: (0px, 0px, 0px, 0px, 64px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-liqueurs-active', )
 $s-icon-liqueurs-name: 's-icon-liqueurs'
-$s-icon-liqueurs-x: 0px
+$s-icon-liqueurs-x: 69px
 $s-icon-liqueurs-y: 0px
-$s-icon-liqueurs-offset-x: 0px
+$s-icon-liqueurs-offset-x: -69px
 $s-icon-liqueurs-offset-y: 0px
 $s-icon-liqueurs-width: 64px
 $s-icon-liqueurs-height: 70px
 $s-icon-liqueurs-total-width: 249px
-$s-icon-liqueurs-total-height: 170px
+$s-icon-liqueurs-total-height: 187px
 $s-icon-liqueurs-image: '../img/sprite.png'
-$s-icon-liqueurs: (0px, 0px, 0px, 0px, 64px, 70px, 249px, 170px, '../img/sprite.png', 's-icon-liqueurs', )
+$s-icon-liqueurs: (69px, 0px, -69px, 0px, 64px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-liqueurs', )
 $s-icon-login-name: 's-icon-login'
-$s-icon-login-x: 21px
+$s-icon-login-x: 0px
 $s-icon-login-y: 150px
-$s-icon-login-offset-x: -21px
+$s-icon-login-offset-x: 0px
 $s-icon-login-offset-y: -150px
 $s-icon-login-width: 16px
 $s-icon-login-height: 20px
 $s-icon-login-total-width: 249px
-$s-icon-login-total-height: 170px
+$s-icon-login-total-height: 187px
 $s-icon-login-image: '../img/sprite.png'
-$s-icon-login: (21px, 150px, -21px, -150px, 16px, 20px, 249px, 170px, '../img/sprite.png', 's-icon-login', )
+$s-icon-login: (0px, 150px, 0px, -150px, 16px, 20px, 249px, 187px, '../img/sprite.png', 's-icon-login', )
 $s-icon-menu-name: 's-icon-menu'
 $s-icon-menu-x: 126px
 $s-icon-menu-y: 150px
@@ -104,9 +115,9 @@ $s-icon-menu-offset-y: -150px
 $s-icon-menu-width: 14px
 $s-icon-menu-height: 10px
 $s-icon-menu-total-width: 249px
-$s-icon-menu-total-height: 170px
+$s-icon-menu-total-height: 187px
 $s-icon-menu-image: '../img/sprite.png'
-$s-icon-menu: (126px, 150px, -126px, -150px, 14px, 10px, 249px, 170px, '../img/sprite.png', 's-icon-menu', )
+$s-icon-menu: (126px, 150px, -126px, -150px, 14px, 10px, 249px, 187px, '../img/sprite.png', 's-icon-menu', )
 $s-icon-mouse-name: 's-icon-mouse'
 $s-icon-mouse-x: 181px
 $s-icon-mouse-y: 75px
@@ -115,9 +126,9 @@ $s-icon-mouse-offset-y: -75px
 $s-icon-mouse-width: 10px
 $s-icon-mouse-height: 16px
 $s-icon-mouse-total-width: 249px
-$s-icon-mouse-total-height: 170px
+$s-icon-mouse-total-height: 187px
 $s-icon-mouse-image: '../img/sprite.png'
-$s-icon-mouse: (181px, 75px, -181px, -75px, 10px, 16px, 249px, 170px, '../img/sprite.png', 's-icon-mouse', )
+$s-icon-mouse: (181px, 75px, -181px, -75px, 10px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-mouse', )
 $s-icon-search-name: 's-icon-search'
 $s-icon-search-x: 84px
 $s-icon-search-y: 150px
@@ -126,31 +137,31 @@ $s-icon-search-offset-y: -150px
 $s-icon-search-width: 16px
 $s-icon-search-height: 16px
 $s-icon-search-total-width: 249px
-$s-icon-search-total-height: 170px
+$s-icon-search-total-height: 187px
 $s-icon-search-image: '../img/sprite.png'
-$s-icon-search: (84px, 150px, -84px, -150px, 16px, 16px, 249px, 170px, '../img/sprite.png', 's-icon-search', )
+$s-icon-search: (84px, 150px, -84px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-search', )
 $s-icon-star-full-name: 's-icon-star-full'
 $s-icon-star-full-x: 181px
-$s-icon-star-full-y: 96px
+$s-icon-star-full-y: 128px
 $s-icon-star-full-offset-x: -181px
-$s-icon-star-full-offset-y: -96px
+$s-icon-star-full-offset-y: -128px
 $s-icon-star-full-width: 10px
 $s-icon-star-full-height: 10px
 $s-icon-star-full-total-width: 249px
-$s-icon-star-full-total-height: 170px
+$s-icon-star-full-total-height: 187px
 $s-icon-star-full-image: '../img/sprite.png'
-$s-icon-star-full: (181px, 96px, -181px, -96px, 10px, 10px, 249px, 170px, '../img/sprite.png', 's-icon-star-full', )
+$s-icon-star-full: (181px, 128px, -181px, -128px, 10px, 10px, 249px, 187px, '../img/sprite.png', 's-icon-star-full', )
 $s-icon-star-name: 's-icon-star'
 $s-icon-star-x: 181px
-$s-icon-star-y: 111px
+$s-icon-star-y: 113px
 $s-icon-star-offset-x: -181px
-$s-icon-star-offset-y: -111px
+$s-icon-star-offset-y: -113px
 $s-icon-star-width: 10px
 $s-icon-star-height: 10px
 $s-icon-star-total-width: 249px
-$s-icon-star-total-height: 170px
+$s-icon-star-total-height: 187px
 $s-icon-star-image: '../img/sprite.png'
-$s-icon-star: (181px, 111px, -181px, -111px, 10px, 10px, 249px, 170px, '../img/sprite.png', 's-icon-star', )
+$s-icon-star: (181px, 113px, -181px, -113px, 10px, 10px, 249px, 187px, '../img/sprite.png', 's-icon-star', )
 $s-icon-strong-alcohol-active-name: 's-icon-strong-alcohol-active'
 $s-icon-strong-alcohol-active-x: 0px
 $s-icon-strong-alcohol-active-y: 75px
@@ -159,9 +170,9 @@ $s-icon-strong-alcohol-active-offset-y: -75px
 $s-icon-strong-alcohol-active-width: 56px
 $s-icon-strong-alcohol-active-height: 70px
 $s-icon-strong-alcohol-active-total-width: 249px
-$s-icon-strong-alcohol-active-total-height: 170px
+$s-icon-strong-alcohol-active-total-height: 187px
 $s-icon-strong-alcohol-active-image: '../img/sprite.png'
-$s-icon-strong-alcohol-active: (0px, 75px, 0px, -75px, 56px, 70px, 249px, 170px, '../img/sprite.png', 's-icon-strong-alcohol-active', )
+$s-icon-strong-alcohol-active: (0px, 75px, 0px, -75px, 56px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-strong-alcohol-active', )
 $s-icon-strong-alcohol-name: 's-icon-strong-alcohol'
 $s-icon-strong-alcohol-x: 138px
 $s-icon-strong-alcohol-y: 0px
@@ -170,20 +181,20 @@ $s-icon-strong-alcohol-offset-y: 0px
 $s-icon-strong-alcohol-width: 56px
 $s-icon-strong-alcohol-height: 70px
 $s-icon-strong-alcohol-total-width: 249px
-$s-icon-strong-alcohol-total-height: 170px
+$s-icon-strong-alcohol-total-height: 187px
 $s-icon-strong-alcohol-image: '../img/sprite.png'
-$s-icon-strong-alcohol: (138px, 0px, -138px, 0px, 56px, 70px, 249px, 170px, '../img/sprite.png', 's-icon-strong-alcohol', )
+$s-icon-strong-alcohol: (138px, 0px, -138px, 0px, 56px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-strong-alcohol', )
 $s-icon-up-name: 's-icon-up'
-$s-icon-up-x: 181px
-$s-icon-up-y: 126px
-$s-icon-up-offset-x: -181px
-$s-icon-up-offset-y: -126px
+$s-icon-up-x: 0px
+$s-icon-up-y: 175px
+$s-icon-up-offset-x: 0px
+$s-icon-up-offset-y: -175px
 $s-icon-up-width: 6px
 $s-icon-up-height: 12px
 $s-icon-up-total-width: 249px
-$s-icon-up-total-height: 170px
+$s-icon-up-total-height: 187px
 $s-icon-up-image: '../img/sprite.png'
-$s-icon-up: (181px, 126px, -181px, -126px, 6px, 12px, 249px, 170px, '../img/sprite.png', 's-icon-up', )
+$s-icon-up: (0px, 175px, 0px, -175px, 6px, 12px, 249px, 187px, '../img/sprite.png', 's-icon-up', )
 $s-icon-vermouth-active-name: 's-icon-vermouth-active'
 $s-icon-vermouth-active-x: 121px
 $s-icon-vermouth-active-y: 75px
@@ -192,9 +203,9 @@ $s-icon-vermouth-active-offset-y: -75px
 $s-icon-vermouth-active-width: 55px
 $s-icon-vermouth-active-height: 70px
 $s-icon-vermouth-active-total-width: 249px
-$s-icon-vermouth-active-total-height: 170px
+$s-icon-vermouth-active-total-height: 187px
 $s-icon-vermouth-active-image: '../img/sprite.png'
-$s-icon-vermouth-active: (121px, 75px, -121px, -75px, 55px, 70px, 249px, 170px, '../img/sprite.png', 's-icon-vermouth-active', )
+$s-icon-vermouth-active: (121px, 75px, -121px, -75px, 55px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-vermouth-active', )
 $s-icon-vermouth-name: 's-icon-vermouth'
 $s-icon-vermouth-x: 61px
 $s-icon-vermouth-y: 75px
@@ -203,9 +214,9 @@ $s-icon-vermouth-offset-y: -75px
 $s-icon-vermouth-width: 55px
 $s-icon-vermouth-height: 70px
 $s-icon-vermouth-total-width: 249px
-$s-icon-vermouth-total-height: 170px
+$s-icon-vermouth-total-height: 187px
 $s-icon-vermouth-image: '../img/sprite.png'
-$s-icon-vermouth: (61px, 75px, -61px, -75px, 55px, 70px, 249px, 170px, '../img/sprite.png', 's-icon-vermouth', )
+$s-icon-vermouth: (61px, 75px, -61px, -75px, 55px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-vermouth', )
 $s-icon-wine-active-name: 's-icon-wine-active'
 $s-icon-wine-active-x: 199px
 $s-icon-wine-active-y: 75px
@@ -214,9 +225,9 @@ $s-icon-wine-active-offset-y: -75px
 $s-icon-wine-active-width: 50px
 $s-icon-wine-active-height: 70px
 $s-icon-wine-active-total-width: 249px
-$s-icon-wine-active-total-height: 170px
+$s-icon-wine-active-total-height: 187px
 $s-icon-wine-active-image: '../img/sprite.png'
-$s-icon-wine-active: (199px, 75px, -199px, -75px, 50px, 70px, 249px, 170px, '../img/sprite.png', 's-icon-wine-active', )
+$s-icon-wine-active: (199px, 75px, -199px, -75px, 50px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-wine-active', )
 $s-icon-wine-name: 's-icon-wine'
 $s-icon-wine-x: 199px
 $s-icon-wine-y: 0px
@@ -225,14 +236,14 @@ $s-icon-wine-offset-y: 0px
 $s-icon-wine-width: 50px
 $s-icon-wine-height: 70px
 $s-icon-wine-total-width: 249px
-$s-icon-wine-total-height: 170px
+$s-icon-wine-total-height: 187px
 $s-icon-wine-image: '../img/sprite.png'
-$s-icon-wine: (199px, 0px, -199px, 0px, 50px, 70px, 249px, 170px, '../img/sprite.png', 's-icon-wine', )
+$s-icon-wine: (199px, 0px, -199px, 0px, 50px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-wine', )
 $spritesheet-width: 249px
-$spritesheet-height: 170px
+$spritesheet-height: 187px
 $spritesheet-image: '../img/sprite.png'
-$spritesheet-sprites: ($s-icon-basket, $s-icon-facebook, $s-icon-hearth, $s-icon-input-arrow, $s-icon-instagram, $s-icon-liqueurs-active, $s-icon-liqueurs, $s-icon-login, $s-icon-menu, $s-icon-mouse, $s-icon-search, $s-icon-star-full, $s-icon-star, $s-icon-strong-alcohol-active, $s-icon-strong-alcohol, $s-icon-up, $s-icon-vermouth-active, $s-icon-vermouth, $s-icon-wine-active, $s-icon-wine, )
-$spritesheet: (249px, 170px, '../img/sprite.png', $spritesheet-sprites, )
+$spritesheet-sprites: ($s-icon-basket, $s-icon-close, $s-icon-facebook, $s-icon-hearth, $s-icon-input-arrow, $s-icon-instagram, $s-icon-liqueurs-active, $s-icon-liqueurs, $s-icon-login, $s-icon-menu, $s-icon-mouse, $s-icon-search, $s-icon-star-full, $s-icon-star, $s-icon-strong-alcohol-active, $s-icon-strong-alcohol, $s-icon-up, $s-icon-vermouth-active, $s-icon-vermouth, $s-icon-wine-active, $s-icon-wine, )
+$spritesheet: (249px, 187px, '../img/sprite.png', $spritesheet-sprites, )
 
 // The provided mixins are intended to be used with the array-like variables
 //
